# VannaDBG

./: .clangd  .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  build.zig  build.zig.zon  clean.sh  local_ci.sh  run.sh  test.sh  workflow.sh
.github/workflows/: ci.yml
ext/cimgui/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ext/cimgui/imgui/backends/: imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp
ext/hashmap/: hashmap.c
ocaml-eval/: dune-project
ocaml-eval/src/: Vanna.ml  dune
ocaml-eval/src/basic/: basic.ml  basic_linkable.ml  dune
roost/: Cargo.toml
roost/abc/: Cargo.toml
roost/abc/src/: main.rs
roost/abc/src/df/: df_gfx.rs  mod.rs
roost/abc/src/render/: render.rs
roost/abc/src/render/shaders/: fragment_shader.glsl  vertex_shader.glsl
roost/abc/src/ui/: mod.rs  ui_core.rs
roost/src/: main.rs
src/: CMakeLists.txt  breakpoint.c  breakpoint.h  debugger.c  debugger.h  main.c  main.zig  registers.h
src/core/: CMakeLists.txt  breakpoint.c  breakpoint.h  debugger.c  debugger.h  registers.c  registers.h
src/domain/: CMakeLists.txt  arena.h  arena_test.c  free_list.h  free_list_test.c  hashmap.h  hashmap_test.c  libtest.h  slice.h  slice_test.c  timing.h
src/dwarf/: CMakeLists.txt  addr_range_cache.c  addr_range_cache.h  addr_range_cache_test.c  conversion.c  conversion.h  sourceline_cache.h
src/ui/: CMakeLists.txt  register_view.c  register_view.h  step_view.c  step_view.h  ui.c  ui.h
src/ui_test/: CMakeLists.txt  main.c
test_files/: breakpoints.c  dwarf.c  funcs.c  hi.c
ui_c/: .gitignore  workflow.sh
ui_c/base/: base.h
ui_c/src/: main.c
ui_c/src/base/: base.h  base_arena.c  base_arena.h  base_inc.c  base_inc.h  base_string8.c  base_string8.h  base_testlib.h  libtest.h  string8.c  string8.h
ui_c/src/base/tests/: arena_test.c  hash_table_test.c  string8_test.c
ui_c/src/draw/: draw.c  draw.h
ui_c/src/os/: os_gfx.c  os_gfx.h  os_inc.c  os_inc.h
ui_c/src/render/: render.c  render.h
ui_c/src/ui/: ui_basic_widgets.c  ui_basic_widgets.h  ui_core.h
ui_roost/: Cargo.toml
ui_roost/src/: main.rs
xx/: main.c
zig-eval/: build.zig  build.zig.zon
zig-eval/src/: arena.zig  base_arena.zig  base_core.zig  main.zig  tests.zig
zig-eval/src/base/: base.zig  base_core.zig
zig-eval/src/df/: df_gfx.zig
zig-eval/src/os/: os_gfx.zig
zig-eval/src/render/: render.zig
zig-eval/src/ui/: ui_core.zig
