(lang dune 3.16)

(name vanna)

; (generate_opam_files true)

; TODO 

(source
 (github username/reponame))

(authors "Author Name")

(maintainers "Maintainer Name")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name vanna)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune) ; Add your opam dependencies here
 (tags
  (topics "to describe" your project)))
