[package]
name = "ui_roost"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
pollster = "0.3.0"
wgpu = { version = "22.1.0", features = ["vulkan-portability"] }
winit = { version = "0.29", features = ["rwh_05"] }

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat"